# gameoverlay

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  generate.bat  generate.sh  premake5.lua
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: compiler-env.cmake  target-arch.cmake  utils.cmake
components/generic/: project.lua
components/generic/include/: dummy_window.hpp  hook.hpp  icanvas.hpp
components/generic/src/: dummy_window.cpp  hook.cpp
components/overlay/: project.lua
components/overlay/src/: canvas_d3d11.cpp  canvas_d3d11.hpp  main.cpp  overlay.cpp  overlay.hpp  renderer_handler.cpp  renderer_handler.hpp  std_include.cpp  std_include.hpp
components/overlay/src/cef/: cef_ui.cpp  cef_ui.hpp  cef_ui_app.cpp  cef_ui_app.hpp  cef_ui_handler.cpp  cef_ui_handler.hpp
components/process/: project.lua
components/process/src/: main.cpp  std_include.cpp
components/renderers/d3d10_11/: project.lua
components/renderers/d3d10_11/src/: main.cpp  renderer.cpp  renderer.hpp  std_include.cpp  std_include.hpp
components/renderers/d3d9/: project.lua
components/renderers/d3d9/src/: canvas.cpp  canvas.hpp  canvas_d3d9.cpp  canvas_d3d9.hpp  d3d9_hook.cpp  d3d9_hook.hpp  d3d9ex_hook.cpp  d3d9ex_hook.hpp  hook_d3d9.cpp  hook_d3d9.hpp  hook_d3d9ex.cpp  hook_d3d9ex.hpp  renderer.cpp  renderer.hpp
components/renderers/dxgi/: project.lua
components/renderers/dxgi/src/: canvas.cpp  canvas.hpp  canvas_d3d10.cpp  canvas_d3d10.hpp  canvas_d3d11.cpp  canvas_d3d11.hpp  canvas_dxgi.cpp  canvas_dxgi.hpp  dxgi_hook.cpp  dxgi_hook.hpp  hook_dxgi.cpp  hook_dxgi.hpp  main.cpp  renderer.cpp  renderer.hpp  std_include.cpp  std_include.hpp
components/renderers/opengl/: project.lua
components/renderers/opengl/src/: canvas.cpp  canvas.hpp  hook.cpp  hook.hpp  renderer.cpp  renderer.hpp  std_include.hpp
components/test/: project.lua
components/test/src/: main.cpp  std_include.hpp
interfaces/include/: backend.hpp  canvas.hpp  irenderer.hpp
src/: .clang-format  CMakeLists.txt  backend.hpp  backend_registry.cpp  backend_registry.hpp  canvas.cpp  canvas.hpp  dllmain.cpp  gameoverlay.cpp  gameoverlay.hpp  hook_manager.hpp  main.cpp  main.hpp  renderer.cpp  renderer.hpp  std_include.cpp  std_include.hpp
src/backend/: CMakeLists.txt  backend.hpp  backend_type.hpp  canvas.cpp  canvas.hpp  dimensions.hpp  renderer.cpp  renderer.hpp  renderer_type.hpp
src/backends/: CMakeLists.txt
src/backends/d3d-legacy/: CMakeLists.txt  d3d8_backend.cpp  d3d8_backend.hpp  d3d8_traits.hpp  d3d8_win.hpp  d3d9_backend.cpp  d3d9_backend.hpp  d3d9_traits.hpp  d3d_legacy_canvas.hpp  d3d_legacy_renderer.hpp
src/backends/d3d8/: CMakeLists.txt  d3d8_backend.cpp  d3d8_backend.hpp  d3d8_canvas.cpp  d3d8_canvas.hpp  d3d8_renderer.cpp  d3d8_renderer.hpp  d3d8_win.hpp
src/backends/d3d8/include/: backend_d3d8.hpp
src/backends/d3d9/: CMakeLists.txt  d3d9.cpp  d3d9_backend.cpp  d3d9_backend.hpp  d3d9_canvas.cpp  d3d9_canvas.hpp  d3d9_renderer.cpp  d3d9_renderer.hpp  d3d9_win.hpp
src/backends/d3d9/include/: backend_d3d9.hpp  d3d9_backend.hpp
src/backends/dxgi/: CMakeLists.txt  d3d10_canvas.cpp  d3d10_canvas.hpp  d3d11_canvas.cpp  d3d11_canvas.hpp  d3d12_canvas.cpp  d3d12_canvas.hpp  d3d12_command_queue_store.cpp  d3d12_command_queue_store.hpp  d3dx_canvas.hpp  dxgi_backend.cpp  dxgi_backend.hpp  dxgi_canvas.hpp  dxgi_canvas_utils.hpp  dxgi_renderer.cpp  dxgi_renderer.hpp  dxgi_traits.hpp  dxgi_utils.hpp  dxgi_win.hpp
src/backends/dxgi/include/: backend_dxgi.hpp
src/backends/opengl/: CMakeLists.txt  gl_include.hpp  gl_object.cpp  gl_object.hpp  gl_scope.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture_scope.hpp  gl_vao_scope.hpp  opengl.cpp  opengl_backend.cpp  opengl_backend.hpp  opengl_canvas.cpp  opengl_canvas.hpp  opengl_renderer.cpp  opengl_renderer.hpp
src/backends/opengl/include/: backend_opengl.hpp
src/backends/vulkan/: CMakeLists.txt  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_canvas.cpp  vulkan_canvas.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/backends/vulkan/include/: backend_vulkan.hpp
src/browser/: CMakeLists.txt  browser_handler.hpp  web_ui.cpp
src/browser-process/: CMakeLists.txt  main.cpp
src/browser/cef/: cef_ui.cpp  cef_ui.hpp  cef_ui_app.cpp  cef_ui_app.hpp  cef_ui_handler.cpp  cef_ui_handler.hpp
src/browser/include/: web_ui.hpp  web_ui_handler.hpp
src/cef-loader/: CMakeLists.txt  cef_include.hpp  cef_loader.cpp  cef_loader.hpp  empty.cpp
src/common/: CMakeLists.txt  dimensions.hpp
src/common/utils/: class_helper.hpp  com.cpp  com.hpp  concurrency.hpp  dummy_window.cpp  dummy_window.hpp  finally.hpp  hook.cpp  hook.hpp  io.cpp  io.hpp  memory.cpp  memory.hpp  nt.cpp  nt.hpp  string.cpp  string.hpp  thread.cpp  thread.hpp  win.hpp
src/data/: main.css  main.html  main.js
src/hooking/: CMakeLists.txt
src/hooking/utils/: hook.cpp  hook.hpp
src/interfaces/: canvas.hpp  renderer.cpp  renderer.hpp
src/launcher/: CMakeLists.txt  injector.cpp  injector.hpp  main.cpp  pe.cpp  pe.hpp  process.cpp  process.hpp  snapshot.cpp  snapshot.hpp
src/overlay/: CMakeLists.txt  app.manifest  frame_buffer.hpp  main.cpp  overlay.cpp  overlay.hpp
src/utils/: concurrency.hpp  concurrent_map.hpp  finally.hpp  hook.cpp  hook.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp
